[package]
name = "tapciify-telegram"
version = "0.1.0"
edition = "2021"

# Don't forget to update `.github/workflows/test.yml`
rust-version = "1.74"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tapciify = { version = "3.3", default-features = false }
image = "0.25"
reqwest = "0.12"
anyhow = "1.0"
